--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8">
 <head>
-	<link rel="stylesheet" type="text/css" href="assect/css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="assect/bootstrap/bootstrap.css">
 	<link rel="stylesheet"  type="text/css"href="assect/css/font-awesome.min.css">
 	<title>Mon CV</title>
@@ -15,7 +15,7 @@
 				<i class="fa fa-home fa-x2" style="color: blue; font-size: 50px;"></i>
 			</p>
 		</div>
-		<div class="col-md-6 lo mt-3">
+		<div class="col-md-6 menu mt-3">
 			<ul>
 				<li><a href="niang.html">Acceuil</a></li>
 				<li><a href="à propos.html">à propos</a></li>
@@ -41,7 +41,7 @@
 		</div>
 	</div> <br>
 		<div>
-			<h3><a href="medias/mon cv.pdf">Cliquer pour voir le  CV</a></h3>
+			<h3><a href="medias/mon cv.pdf" class="cv">Cliquer pour voir le  CV</a></h3>
 		</div>
 		<div class="row text-center zo my-5">
 			<div class="col-md-8">
