--- a/niang.html
+++ b/niang.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8">
 <head>
-	<link rel="stylesheet" type="text/css" href="assect/css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="assect/bootstrap/bootstrap.css">
 	<link rel="stylesheet"  type="text/css"href="assect/css/font-awesome.min.css">
 	<title>Acceuil</title>
@@ -15,7 +15,7 @@
 				<i class="fa fa-home fa-x2" style="color: blue; font-size: 50px;"></i>
 			</p>
 		</div>
-		<div class="col-md-6 lo mt-3">
+		<div class="col-md-6 menu mt-3">
 			<ul>
 				<li><a href="niang.html">Acceuil</a></li>
 				<li><a href="à propos.html">à propos</a></li>
@@ -64,7 +64,7 @@
 		<div class="col-md-4">
 			<div class="card">
 				<div class="card-header">
-					<img src="medias/Photos/niang.jpg" height="200" width="200" class="rounded-circle img-popup img-thumbnail">
+					<img src="medias/Photos/niang.jpg" height="200" width="200" class="nia">
 				</div>
 			</div>
 		</div>
